# ixpy-df-mcp

./: .gitignore  README.md  entry-points.json  extraction.py  input.json  main.py  mcp.json  pyproject.toml  server.py  test_mcp.sh  uipath.json
