[project]
name = "ixpy-df-mcp"
version = "0.1.2"
authors = [{ name = "Nathan Ness" }]
description = "IXP Data Fabric MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uipath>=2.10.72",
    "uipath-mcp>=0.2.2",
]

[dependency-groups]
dev = [
    "uipath-dev>=0.0.79",
]
